# CPP-HTTP-Server

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
include/: AddrInfo.hpp  Cors.hpp  HTTPErrors.hpp  HTTPRequest.hpp  HTTPResponse.hpp  HTTPSerializer.hpp  HandleConnection.hpp  HttpServer.hpp  IRouter.hpp  Logger.hpp  Metrics.hpp  RouteTypes.hpp  Router.hpp  ServerConfig.hpp  SocketGuard.hpp  StringUtils.hpp  ThreadPool.hpp  UserRoutes.hpp  Utils.hpp  WSA.hpp
nginx/: nginx.conf
public/: app.js  index.html  style.css
src/: Cors.cpp  HTTPRequest.cpp  HTTPSerializer.cpp  HandleConnection.cpp  HttpServer.cpp  Router.cpp  SocketGuard.cpp  ThreadPool.cpp  UserRoutes.cpp  Utils.cpp  WSA.cpp  main.cpp
tests/: fuzz_http_parser.cpp  test_connection.cpp  test_middleware.cpp  test_parser.cpp  test_router.cpp  test_serializer.cpp  test_threadpool.cpp
